<resources>

    <string name="app_name">GameCount</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_list">GameList</string>
    <string name="new_s">New</string>
    <string name="menu_about">About</string>
    <string name="menu_save">Save</string>
    
    <string name="dialog_comfirm_discard">Comfirm to discard the change?</string>
    <string name="dialog_comfirm_error">Error</string>    
    <string name="dialog_comfirm_delete">Are you sure to delete %1$s ?</string>
    
    <string name="comfirm">Comfirm</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    
    <string name="name_hint">&lt;Press to input name></string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="memo">Memo</string>
    <string name="memo_hint">&lt;Press to input memo></string>
    <string name="new_round">New Round</string>
    <string name="new_player">New Player</string>
    <string name="color_pick">Pick Color</string>
    
    <string name="title_new_game">New Game</string>
    <string name="title_edit_game">Edit Game</string>
    <string name="title_new_player">New Player</string>
    <string name="title_edit_player">Edit Player</string>
    <string name="player">Player</string>
    <string name="game">Game</string>
    <string name="round">Round</string>
    <string name="score">Score</string>
    
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>

</resources>